--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Bai+Jamjuree:wght@400;600&display=swap" rel="stylesheet">
 		<link rel="stylesheet" href="/dist/style.css" />
+		<!-- the best way for script tag   -->
+		<!-- https://flaviocopes.com/javascript-async-defer/ -->
 		<script defer src="/dist/script.js"></script>						
 	</head>
 	<body>
