--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 		<meta charset="UTF-8" />
 
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta
+  name="description"
+  content="">
 		<title>Clipboard Landing Page</title>
 		<link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
 		<link rel="preconnect" href="https://fonts.googleapis.com">
@@ -17,18 +20,22 @@
 	<body>
 		<header class="header">
           <div class="header__hero">
-			  <div class="logo">
+			  <div class="header__hero-logo">
 				<svg width="125" height="125" xmlns="http://www.w3.org/2000/svg"><g stroke="#26BBA4" stroke-width="10" fill="none" fill-rule="evenodd"><circle cx="62.5" cy="62.5" r="57.5"/><path d="M85.481 85.481c-12.692 12.692-33.27 12.692-45.962 0s-12.692-33.27 0-45.962 33.27-12.692 45.962 0" stroke-linecap="round"/></g></svg>
+			  </div>
+			  <div class="header__text">
+				  <h1>	A history of everything you copy</h1>
+				  <p>	Clipboard allows you to track and organize everything you 
+					copy. Instantly access your clipboard on all your devices.</p>
 			  </div>
 		  </div>
 	   </header>
 	</body>
 
 	
-	A history of everything you copy
 
-	Clipboard allows you to track and organize everything you 
-	copy. Instantly access your clipboard on all your devices.
+
+
   
 	Download for iOS
 	Download for Mac
