--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@
 				  <p>Clipboard allows you to track and organize everything you 
 					copy. Instantly access your clipboard on all your devices.</p>
 			  </div>
+			  <div class="header__btns">
+				  <button class="cyan">Download for iOS</button>
+				  <button class="violet">Download for Mac</button>
+			  </div>
 		  </div>
 	   </header>
 	</body>
@@ -42,9 +46,7 @@
 
 
 
-  
-	Download for iOS
-	Download for Mac
+
   
 	Keep track of your snippets
   
