--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 			  </div>
 			  <div class="header__btns">
 				  <button class="cyan">Download for iOS</button>
-				  <button class="violet">Download for Mac</button>
+				  <button class="lightblue">Download for Mac</button>
 			  </div>
 		  </div>
 	   </header>
