--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
 					copy. Instantly access your clipboard on all your devices.</p>
 			  </div>
 			  <div class="header__btns">
-				  <button class="cyan">Download for iOS</button>
-				  <button class="lightblue">Download for Mac</button>
+				  <button class="btn_cyan">Download for iOS</button>
+				  <button class="btn_lightblue">Download for Mac</button>
 			  </div>
 		  </div>
 	   </header>
