--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
 
 
-
+<!-- 
   
 	Keep track of your snippets
   
@@ -99,5 +99,5 @@
 	Contact Us
 	Privacy Policy
 	Press Kit
-	Install Guide
+	Install Guide -->
 </html>
