--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	</head>
 	<body>
 		<header class="header container">
-          <div class="header__hero">
+          <div class="header__hero container">
 			  <div class="header__hero-logo">
 				  <!-- I add role="img" to make sure that with macOS Safari, VoiceOver (old versions) announces "image". -->
 				<svg width="125" height="125" xmlns="http://www.w3.org/2000/svg" role="img">
@@ -41,9 +41,6 @@
 		  </div>
 	   </header>
 	</body>
-
-	
-
 
 
 <!-- 
