--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<script defer src="/dist/script.js"></script>						
 	</head>
 	<body>
-		<header class="header">
+		<header class="header container">
           <div class="header__hero container">
 			  <div class="header__hero-logo">
 				  <!-- I add role="img" to make sure that with macOS Safari, VoiceOver (old versions) announces "image". -->
