--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 		<script defer src="/dist/script.js"></script>						
 	</head>
 	<body>
-		<header class="header container">
-          <div class="header__hero container">
+		<header class="header">
+          <div class="header__hero">
 			  <div class="header__hero-logo">
 				  <!-- I add role="img" to make sure that with macOS Safari, VoiceOver (old versions) announces "image". -->
 				<svg width="125" height="125" xmlns="http://www.w3.org/2000/svg" role="img">
