--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 	</head>
 	<body>
 		<header class="header">
-          <div class="header__hero">
-			  <div class="header__hero-logo">
+          <div class="header__hero container">
+		
 				  <!-- I add role="img" to make sure that with macOS Safari, VoiceOver (old versions) announces "image". -->
 				<svg width="125" height="125" xmlns="http://www.w3.org/2000/svg" role="img">
 					<g stroke="#26BBA4" stroke-width="10" fill="none" fill-rule="evenodd">
@@ -28,16 +28,16 @@
 						<path d="M85.481 85.481c-12.692 12.692-33.27 12.692-45.962 0s-12.692-33.27 0-45.962 33.27-12.692 45.962 0" stroke-linecap="round"/>
 					</g>
 				</svg>
-			  </div>
-			  <div class="header__text">
-				  <h1>	A history of everything you copy</h1>
-				  <p>Clipboard allows you to track and organize everything you 
+			
+			 
+				  <h1 class="header__hero-heading">	A history of everything you copy</h1>
+				  <p class="header__hero-par">Clipboard allows you to track and organize everything you 
 					copy. Instantly access your clipboard on all your devices.</p>
-			  </div>
-			  <div class="header__btns">
+		
+			
 				  <button class="btn_cyan">Download for iOS</button>
 				  <button class="btn_lightblue">Download for Mac</button>
-			  </div>
+			 
 		  </div>
 	   </header>
 	</body>
