--- a/index.html
+++ b/index.html
@@ -34,11 +34,13 @@
 				  <p class="header__hero-par">Clipboard allows you to track and organize everything you 
 					copy. Instantly access your clipboard on all your devices.</p>
 		
-			
-				  <button class="btn_cyan">Download for iOS</button>
-				  <button class="btn_lightblue">Download for Mac</button>
+			<div class="header__btns">
+				<button class="btn_cyan">Download for iOS</button>
+				<button class="btn_lightblue">Download for Mac</button>
+			</div>
+
+		</div>
 			 
-		  </div>
 	   </header>
 	</body>
 
