--- a/index.html
+++ b/index.html
@@ -1,69 +1,84 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
 
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<meta
-  name="description"
-  content="">
-		<title>Clipboard Landing Page</title>
-		<link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-		<link rel="preconnect" href="https://fonts.googleapis.com">
-		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-		<link href="https://fonts.googleapis.com/css2?family=Bai+Jamjuree:wght@400;600&display=swap" rel="stylesheet">
-		<link rel="stylesheet" href="/dist/style.css" />
-		<!-- the best way for script tag   -->
-		<!-- https://flaviocopes.com/javascript-async-defer/ -->
-		<script defer src="/dist/script.js"></script>						
-	</head>
-	<body>
-		<header class="header">
-          <div class="header__hero container">
-		
-				  <!-- I add role="img" to make sure that with macOS Safari, VoiceOver (old versions) announces "image". -->
-				<svg width="125" height="125" xmlns="http://www.w3.org/2000/svg" role="img">
-					<g stroke="#26BBA4" stroke-width="10" fill="none" fill-rule="evenodd">
-						<circle cx="62.5" cy="62.5" r="57.5"/>
-						<path d="M85.481 85.481c-12.692 12.692-33.27 12.692-45.962 0s-12.692-33.27 0-45.962 33.27-12.692 45.962 0" stroke-linecap="round"/>
-					</g>
-				</svg>
-			
-			 
-				  <h1 class="header__hero-heading">	A history of everything you copy</h1>
-				  <p class="header__hero-par">Clipboard allows you to track and organize everything you 
-					copy. Instantly access your clipboard on all your devices.</p>
-		
+<head>
+	<meta charset="UTF-8" />
+
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<meta name="description" content="">
+	<title>Clipboard Landing Page</title>
+	<link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Bai+Jamjuree:wght@400;600&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="/dist/style.css" />
+	<!-- the best way for script tag   -->
+	<!-- https://flaviocopes.com/javascript-async-defer/ -->
+	<script defer src="/dist/script.js"></script>
+</head>
+
+<body>
+	<header class="header">
+		<div class="header__hero container">
+
+			<!-- I add role="img" to make sure that with macOS Safari, VoiceOver (old versions) announces "image". -->
+			<svg width="125" height="125" xmlns="http://www.w3.org/2000/svg" role="img">
+				<g stroke="#26BBA4" stroke-width="10" fill="none" fill-rule="evenodd">
+					<circle cx="62.5" cy="62.5" r="57.5" />
+					<path
+						d="M85.481 85.481c-12.692 12.692-33.27 12.692-45.962 0s-12.692-33.27 0-45.962 33.27-12.692 45.962 0"
+						stroke-linecap="round" />
+				</g>
+			</svg>
+
+
+			<h1 class="header__hero-heading"> A history of everything you copy</h1>
+			<p class="header__hero-par">Clipboard allows you to track and organize everything you
+				copy. Instantly access your clipboard on all your devices.</p>
+
 			<div class="header__btns">
 				<button class="btn_cyan">Download for iOS</button>
 				<button class="btn_lightblue">Download for Mac</button>
 			</div>
-
 		</div>
-			 
-	   </header>
-	</body>
+		<section class="info">
+			<div class="info__wrapp">
+				<h2 class="info__h">Keep track of your snippets</h2>
+				<p class="info__p"> Clipboard instantly stores any item you copy in the cloud,
+					meaning you can access your snippets immediately on all your
+					devices. Our Mac and iOS apps will help you organize everything.</p>
+				<img src="../images/image-computer.png" alt="computer">
+				<h3>Quick Search</h3>
+				<p>Easily search your snippets by content, category, web address, application, and more.</p>
+				<h3>iCloud Sync</h3>
+				<p>Instantly saves and syncs snippets across all your devices.</p>
+				<h3>Complete History</h3>
+				<p>Retrieve any snippets from the first moment you started using the app.</p>
+		</div>
+		</section>
+
+
+	</header>
+</body>
 
 
 <!-- 
   
-	Keep track of your snippets
+	
   
-	Clipboard instantly stores any item you copy in the cloud, 
-	meaning you can access your snippets immediately on all your 
-	devices. Our Mac and iOS apps will help you organize everything.
+
   
-	Quick Search
+
   
-	Easily search your snippets by content, category, web address, application, and more.
+	
   
-	iCloud Sync
+
   
-	Instantly saves and syncs snippets across all your devices.
+	
   
-	Complete History
+	
   
-	Retrieve any snippets from the first moment you started using the app.
+	
   
 	Access Clipboard anywhere
   
@@ -99,4 +114,5 @@
 	Privacy Policy
 	Press Kit
 	Install Guide -->
+
 </html>
