--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 			</div>
 		</div>
 		<section class="info">
-			<div class="info__wrapp">
+			<div class="info__wrapper container">
 				<h2 class="info__h">Keep track of your snippets</h2>
 				<p class="info__p"> Clipboard instantly stores any item you copy in the cloud,
 					meaning you can access your snippets immediately on all your
