--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 				<button class="btn_lightblue">Download for Mac</button>
 			</div>
 		</div>
-		<section class="info">
+		<section class="info container">
 			<div class="info__wrapper container">
 				<h2 class="info__h">Keep track of your snippets</h2>
 				<p class="info__p"> Clipboard instantly stores any item you copy in the cloud,
