--- a/index.html
+++ b/index.html
@@ -44,25 +44,26 @@
 		<section class="info container">
 			<div class="info__wrapper container">
 				<h2 class="info__h">Keep track of your snippets</h2>
-				<p class="info__p"> Clipboard instantly stores any item you copy in the cloud,
+				<p class="info__p fnt-p"> Clipboard instantly stores any item you copy in the cloud,
 					meaning you can access your snippets immediately on all your
 					devices. Our Mac and iOS apps will help you organize everything.</p>
 				<img class="info__image" src="../images/image-computer.png" alt="computer">
 				<div class="subgrid">
 					<h3>Quick Search</h3>
-					<p class="pad_b-sm">Easily search your snippets by content, category, web address, application, and more.</p>
+					<p class="pad_b-sm fnt-p-sm">Easily search your snippets by content, category, web address, application, and more.</p>
 					<h3>iCloud Sync</h3>
-					<p class="pad_b-sm">Instantly saves and syncs snippets across all your devices.</p>
+					<p class="pad_b-sm fnt-p-sm">Instantly saves and syncs snippets across all your devices.</p>
 					<h3>Complete History</h3>
-					<p>Retrieve any snippets from the first moment you started using the app.</p>
+					<p class="fnt-p-sm">Retrieve any snippets from the first moment you started using the app.</p>
 				</div>
+			</div>
+			</section>
+			dection.
+		</header>
+	</body>
 
-		</div>
-		</section>
 
 
-	</header>
-</body>
 
 
 <!-- 
