--- a/index.html
+++ b/index.html
@@ -58,36 +58,23 @@
 				</div>
 			</div>
 			</section>
-			dection.
+			<section class="clipboard">
+				<div class="clipboard__acces">
+					<h2>Access Clipboard anywhere</h2>
+					<p>Whether you’re on the go, or at your computer, you can access all your Clipboard 
+						snippets in a few simple clicks.
+					</p>
+					<img src="../images/image-devices.png" alt="devices">
+				</div>
+			</section>
 		</header>
 	</body>
 
 
 
 
-
 <!-- 
-  
-	
-  
 
-  
-
-  
-	
-  
-
-  
-	
-  
-	
-  
-	
-  
-	Access Clipboard anywhere
-  
-	Whether you’re on the go, or at your computer, you can access all your Clipboard 
-	snippets in a few simple clicks.
   
 	Supercharge your workflow
   
