--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 			</div>
 			</section>
 			<section class="clipboard">
-				<div class="clipboard__acces">
+				<div class="clipboard__acces container">
 					<h2>Access Clipboard anywhere</h2>
 					<p>Whether you’re on the go, or at your computer, you can access all your Clipboard 
 						snippets in a few simple clicks.
