--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 			<section class="clipboard">
 				<div class="clipboard__acces container">
 					<h2>Access Clipboard anywhere</h2>
-					<p>Whether you’re on the go, or at your computer, you can access all your Clipboard 
+					<p class="fnt-p" >Whether you’re on the go, or at your computer, you can access all your Clipboard 
 						snippets in a few simple clicks.
 					</p>
 					<img src="../images/image-devices.png" alt="devices">
