--- a/index.html
+++ b/index.html
@@ -67,6 +67,9 @@
 					<img src="../images/image-devices.png" alt="devices">
 				</div>
 			</section>
+			<section class="workflow">
+				
+			</section>
 		</header>
 	</body>
 
