--- a/index.html
+++ b/index.html
@@ -18,60 +18,70 @@
 </head>
 
 <body>
-	<header class="header">
-		<div class="header__hero container">
+<header class="header">
+	<div class="header__hero container">
 
-			<!-- I add role="img" to make sure that with macOS Safari, VoiceOver (old versions) announces "image". -->
-			<svg width="125" height="125" xmlns="http://www.w3.org/2000/svg" role="img">
-				<g stroke="#26BBA4" stroke-width="10" fill="none" fill-rule="evenodd">
-					<circle cx="62.5" cy="62.5" r="57.5" />
-					<path
-						d="M85.481 85.481c-12.692 12.692-33.27 12.692-45.962 0s-12.692-33.27 0-45.962 33.27-12.692 45.962 0"
-						stroke-linecap="round" />
-				</g>
-			</svg>
+		<!-- I add role="img" to make sure that with macOS Safari, VoiceOver (old versions) announces "image". -->
+		<svg width="125" height="125" xmlns="http://www.w3.org/2000/svg" role="img">
+		<g stroke="#26BBA4" stroke-width="10" fill="none" fill-rule="evenodd">
+		<circle cx="62.5" cy="62.5" r="57.5" />
+		<path
+		d="M85.481 85.481c-12.692 12.692-33.27 12.692-45.962 0s-12.692-33.27 0-45.962 33.27-12.692 45.962 0"
+		stroke-linecap="round" />
+		</g>
+		</svg>
 
 
-			<h1 class="header__hero-heading"> A history of everything you copy</h1>
-			<p class="header__hero-par">Clipboard allows you to track and organize everything you
-				copy. Instantly access your clipboard on all your devices.</p>
+		<h1 class="header__hero-heading"> A history of everything you copy</h1>
+		<p class="header__hero-par">Clipboard allows you to track and organize everything you
+		copy. Instantly access your clipboard on all your devices.</p>
 
-			<div class="header__btns">
-				<button class="btn_cyan">Download for iOS</button>
-				<button class="btn_lightblue">Download for Mac</button>
-			</div>
+	<div class="header__btns">
+		<button class="btn_cyan">Download for iOS</button>
+		<button class="btn_lightblue">Download for Mac</button>
 		</div>
-		<section class="info container">
-			<div class="info__wrapper container">
-				<h2 class="info__h">Keep track of your snippets</h2>
-				<p class="info__p fnt-p"> Clipboard instantly stores any item you copy in the cloud,
-					meaning you can access your snippets immediately on all your
-					devices. Our Mac and iOS apps will help you organize everything.</p>
-				<img class="info__image" src="../images/image-computer.png" alt="computer">
-				<div class="subgrid">
-					<h3>Quick Search</h3>
-					<p class="pad_b-sm fnt-p-sm">Easily search your snippets by content, category, web address, application, and more.</p>
-					<h3>iCloud Sync</h3>
-					<p class="pad_b-sm fnt-p-sm">Instantly saves and syncs snippets across all your devices.</p>
-					<h3>Complete History</h3>
-					<p class="fnt-p-sm">Retrieve any snippets from the first moment you started using the app.</p>
-				</div>
-			</div>
-			</section>
-			<section class="clipboard">
-				<div class="clipboard__acces container">
-					<h2>Access Clipboard anywhere</h2>
-					<p class="fnt-p" >Whether you’re on the go, or at your computer, you can access all your Clipboard 
-						snippets in a few simple clicks.
-					</p>
-					<img src="../images/image-devices.png" alt="devices">
-				</div>
-			</section>
-			<section class="workflow">
-				
-			</section>
-		</header>
-	</body>
+	</div>
+<section class="info container">
+	<div class="info__wrapper container">
+		<h2 class="info__h">Keep track of your snippets</h2>
+		<p class="info__p fnt-p"> Clipboard instantly stores any item you copy in the cloud,
+			meaning you can access your snippets immediately on all your
+			devices. Our Mac and iOS apps will help you organize everything.</p>
+		<img class="info__image" src="../images/image-computer.png" alt="computer">
+		<div class="subgrid">
+			<h3>Quick Search</h3>
+			<p class="pad_b-sm fnt-p-sm">Easily search your snippets by content, category, web address,
+				application, and more.</p>
+			<h3>iCloud Sync</h3>
+			<p class="pad_b-sm fnt-p-sm">Instantly saves and syncs snippets across all your devices.</p>
+			<h3>Complete History</h3>
+			<p class="fnt-p-sm">Retrieve any snippets from the first moment you started using the app.</p>
+		</div>
+	</div>
+</section>
+<section class="clipboard">
+	<div class="clipboard__acces container">
+		<h2>Access Clipboard anywhere</h2>
+		<p class="fnt-p">Whether you’re on the go, or at your computer, you can access all your Clipboard
+			snippets in a few simple clicks.
+		</p>
+		<img src="../images/image-devices.png" alt="devices">
+	</div>
+</section>
+	<section class="workflow">
+		<div class="workflow__heading">
+			<h2 class="wrapper-h">Supercharge your workflow</h2>
+			<p class="wrapper-p">We’ve got the tools to boost your productivity.</p>
+		</div>
+
+		
+		<svg width="44" height="40" xmlns="http://www.w3.org/2000/svg"><g fill="#9EABB2" fill-rule="nonzero"><path d="M11.07 0C8.353 0 6.14 2.192 6.14 4.876l-.179 25.278 2.69.02.179-25.289c0-1.21 1.005-2.196 2.24-2.196h27.027V0H11.071z"/><path d="M38.097 0a5.115 5.115 0 00-5.11 5.11v28.37c0 2.052-1.668 3.72-3.72 3.72a3.725 3.725 0 01-3.72-3.72V30.21c0-.743-.601-1.345-1.344-1.345H1.345C.602 28.864 0 29.466 0 30.21v3.272a6.417 6.417 0 006.41 6.409V37.2a3.724 3.724 0 01-3.72-3.72v-1.927h20.168v1.928a6.417 6.417 0 006.41 6.409 6.417 6.417 0 006.409-6.41V12.46h6.185c.743 0 1.345-.602 1.345-1.345V5.11A5.115 5.115 0 0038.097 0zm2.42 9.77h-4.84V5.11a2.423 2.423 0 012.42-2.42 2.423 2.423 0 012.42 2.42v4.66z"/><path d="M6.14 37.201h22.813v2.689H6.14zM19.99 7.485h-6.947a1.345 1.345 0 100 2.69h6.947a1.345 1.345 0 100-2.69zM28.057 12.863H13.043a1.345 1.345 0 100 2.69h15.014a1.345 1.345 0 100-2.69zM28.057 18.242H13.043a1.345 1.345 0 100 2.69h15.014a1.344 1.344 0 100-2.69zM28.057 23.62H13.043a1.345 1.345 0 100 2.69h15.014a1.345 1.345 0 100-2.69z"/></g></svg>
+
+
+
+	</section>
+</header>
+</body>
 
 
 
@@ -79,9 +89,9 @@
 <!-- 
 
   
-	Supercharge your workflow
+	
   
-	We’ve got the tools to boost your productivity.
+	
   
 	Create blacklists
   
