--- a/index.html
+++ b/index.html
@@ -113,13 +113,25 @@
 	</section>
     <section class="partners">
 		<div class="partners__container">
-			<a href="#" class="partners__link"><img src="assets/img/logo-google.png" alt="Google website"></a>
-			<a href="#" class="partners__link"><img src="assets/img/logo-ibm.png" alt="Ibm website"></a>
-			<a href="#" class="partners__link"><img src="assets/img/logo-microsoft.png" alt="Microsoft website"></a>
-			<a href="#" class="partners__link"><img src="assets/img/logo-hp.png" alt="Hevlet Packard website"></a>
-			<a href="#" class="partners__link"><img src="assets/img/logo-vector-graphics.png" alt="Vector graphics website"></a>
+			<a href="#" class="partners__link"><img src="../images/logo-google.png" alt="Google website"></a>
+			<a href="#" class="partners__link"><img src="../images/logo-ibm.png" alt="Ibm website"></a>
+			<a href="#" class="partners__link"><img src="../images/logo-microsoft.png" alt="Microsoft website"></a>
+			<a href="#" class="partners__link"><img src="../images/logo-hp.png" alt="Hevlet Packard website"></a>
+			<a href="#" class="partners__link"><img src="../images/logo-vector-graphics.png" alt="Vector graphics website"></a>
 		  </div>
 	</section>
+	<section class="cta">
+		<div class="cta__wrapp">
+				<h2 class="cta_h">Clipboard for iOS and Mac OS</h2>
+					<p class="cta__p">Available for free on the App Store. Download for Mac or iOS, sync with iCloud 
+						and you’re ready to start adding to your clipboard.</p>
+					<button class="btn">Download for iOS</button>
+					<button class="btn">Download for Mac</button>
+				</div>
+			</section>
+
+					
+				
 
 </body>
 
@@ -133,25 +145,14 @@
   
 	
   
-	Create blacklists
+
   
-	Ensure sensitive information never makes its way to your clipboard by excluding certain sources.
+	
   
-	Plain text snippets
+
   
-	Remove unwanted formatting from copied text for a consistent look.
-  
-	Sneak preview
-  
-	Quick preview of all snippets on your Clipboard for easy access.
-  
-	Clipboard for iOS and Mac OS
-  
-	Available for free on the App Store. Download for Mac or iOS, sync with iCloud 
-	and you’re ready to start adding to your clipboard.
-  
-	Download for iOS
-	Download for Mac
+	
+	
   
 	FAQs
 	Contact Us
