--- a/index.html
+++ b/index.html
@@ -125,8 +125,8 @@
 				<h2 class="cta_h">Clipboard for iOS and Mac OS</h2>
 					<p class="cta__p">Available for free on the App Store. Download for Mac or iOS, sync with iCloud 
 						and you’re ready to start adding to your clipboard.</p>
-					<button class="btn">Download for iOS</button>
-					<button class="btn">Download for Mac</button>
+					<button class="btn_cyan">Download for iOS</button>
+					<button class="btn_lightblue">Download for Mac</button>
 				</div>
 			</section>
 
