--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 		  </div>
 	</section>
 	<section class="cta">
-		<div class="cta__wrapp">
+		<div class="cta__wrapp container">
 				<h2 class="cta_h">Clipboard for iOS and Mac OS</h2>
 					<p class="cta__p">Available for free on the App Store. Download for Mac or iOS, sync with iCloud 
 						and you’re ready to start adding to your clipboard.</p>
