--- a/index.html
+++ b/index.html
@@ -131,9 +131,9 @@
 			</section>
              <!-- Footer -->
   <footer class="footer">
-    <div class="footer__container">
+    <div class="footer__wrapp container">
       <div class="footer__logo">
-        <img src="assets/img/logo.svg" alt="">
+        <img src="../images/logo.svg" alt="">
       </div>
       <nav class="footer__nav">
         <ul class="footer__nav-list">
@@ -173,7 +173,7 @@
       </ul>
       <div class="footer__attribution">
         <p class="footer__text">Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.</p>
-        <p class="footer__text">Coded by <a href="https://github.com/tediko" target="_blank">tediko</a>.</p>
+        <p class="footer__text">Coded by <a href="https://github.com/tediko" target="_blank">Marko</a>.</p>
       </div>
     </div>
   </footer>
