--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 	<!-- the best way for script tag   -->
 	<!-- https://flaviocopes.com/javascript-async-defer/ -->
 	<script defer src="/dist/script.js"></script>
+	<script src="https://kit.fontawesome.com/b961f1cbcd.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -177,35 +178,7 @@
       </div>
     </div>
   </footer>
-
-					
-				
-
+  
 </body>
-
-
-
-
-<!-- 
-
-  
-	
-  
-	
-  
-
-  
-	
-  
-
-  
-	
-	
-  
-	FAQs
-	Contact Us
-	Privacy Policy
-	Press Kit
-	Install Guide -->
-
 </html>
+
