--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
         </li>
         <li class="footer__socials-item">
           <a href="#" class="footer__socials-link" aria-label="Follow @name on Instagram">
-            <i class="fab fa-instagram" aria-hidden="true"></i>
+            <i class="fab fa-instagram" style="width:24px; height:24px"  aria-hidden="true"></i>
           </a>
         </li>
       </ul>
@@ -178,7 +178,7 @@
       </div>
     </div>
   </footer>
-  
+
 </body>
 </html>
 
