--- a/index.html
+++ b/index.html
@@ -172,11 +172,11 @@
           </a>
         </li>
       </ul>
-      <div class="footer__attribution">
+      <!-- <div class="footer__attribution">
         <p class="footer__text">Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.</p>
         <p class="footer__text">Coded by <a href="https://github.com/tediko" target="_blank">Marko</a>.</p>
       </div>
-    </div>
+    </div> -->
   </footer>
 
 </body>
