--- a/index.html
+++ b/index.html
@@ -130,14 +130,15 @@
 					<button class="btn_lightblue">Download for Mac</button>
 				</div>
 			</section>
-             <!-- Footer -->
+
+         <!-- Footer -->
   <footer class="footer">
     <div class="footer__wrapp container">
-      <div class="footer__logo">
+      <div class="footer__logo item-a">
         <img src="../images/logo.svg" alt="">
       </div>
-      <nav class="footer__nav">
-        <ul class="footer__nav-list">
+      <nav class="footer__nav item-b">
+        <ul class="footer__nav-list  subitem">
           <li class="footer__nav-item">
             <a href="#" class="footer__nav-link"><span data-content="FAQs" aria-hidden="true"></span>FAQs</a>
           </li>
@@ -155,7 +156,7 @@
           </li>
         </ul>
       </nav>
-      <ul class="footer__socials">
+      <ul class="footer__socials item-c">
         <li class="footer__socials-item">
           <a href="#" class="footer__socials-link" aria-label="Follow @name on Facebook">
             <i class="fab fa-facebook-square" aria-hidden="true"></i>
@@ -175,8 +176,8 @@
       <!-- <div class="footer__attribution">
         <p class="footer__text">Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.</p>
         <p class="footer__text">Coded by <a href="https://github.com/tediko" target="_blank">Marko</a>.</p>
-      </div>
-    </div> -->
+      </div>-->
+    </div> 
   </footer>
 
 </body>
