--- a/index.html
+++ b/index.html
@@ -139,19 +139,19 @@
       </div>
       <nav class="footer__nav item-b">
         <ul class="footer__nav-list  subitem">
-          <li class="footer__nav-item">
+          <li class="footer__nav-item first">
             <a href="#" class="footer__nav-link"><span data-content="FAQs" aria-hidden="true"></span>FAQs</a>
           </li>
-          <li class="footer__nav-item">
+          <li class="footer__nav-item second">
             <a href="#" class="footer__nav-link"><span data-content="Contact Us" aria-hidden="true"></span>Contact Us</a>
           </li>
-          <li class="footer__nav-item">
+          <li class="footer__nav-item third">
             <a href="#" class="footer__nav-link"><span data-content="Privacy Policy" aria-hidden="true"></span>Privacy Policy</a>
           </li>
-          <li class="footer__nav-item">
+          <li class="footer__nav-item fourth">
             <a href="#" class="footer__nav-link"><span data-content="Press Kit" aria-hidden="true"></span>Press Kit</a>
           </li>
-          <li class="footer__nav-item">
+          <li class="footer__nav-item fifth">
             <a href="#" class="footer__nav-link"><span data-content="Install Guide" aria-hidden="true"></span>Install Guide</a>
           </li>
         </ul>
